@@ -1,5 +1,10 @@
 2008-08-03  Wakaba  <wakaba@suika.fam.cx>
 
+	* webidl-valuetype.dat: Test data for ignored DOMString
+	valuetype are added.
+
+2008-08-03  Wakaba  <wakaba@suika.fam.cx>
+
 	* webidl-exception.dat, webidl-typedef.dat,
 	webidl-valuetype.dat: New test data files.
 
